--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#FFC107</color>
     <color name="colorPrimaryVariant">#FFA000</color>
     <color name="colorSecondary">#03A9F4</color>
+    <color name="colorAccent">#FF5722</color>
     <color name="dividerColor">#BDBDBD</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
