--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MissedAttendanceFragment">
+    tools:context=".ui.add.SecondFragment">
 
     <TextView
         android:id="@+id/tvNameTitle"
