--- a/app/src/main/res/layout/item_attendance.xml
+++ b/app/src/main/res/layout/item_attendance.xml
@@ -5,45 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:layout_margin="8dp"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="4dp">
 
     <TextView
         android:id="@+id/tv_rv_NameTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:gravity="center"
         android:text="@string/itemText01" />
 
     <TextView
         android:id="@+id/tv_rv_nameValue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:textStyle="italic" />
+        android:textColor="@color/colorSecondary"
+        android:layout_marginBottom="16dp" />
 
     <TextView
         android:id="@+id/tv_rv_SubjectTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:gravity="center"
         android:text="@string/itemText02" />
 
     <TextView
         android:id="@+id/tv_rv_subjectValue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:textStyle="italic" />
+        android:textColor="@color/colorSecondary"
+        android:layout_marginBottom="16dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_rv_dateValue"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:gravity="start" />
 
         <ImageView
             android:id="@+id/justifiedImageView"
@@ -52,15 +57,8 @@
             android:layout_weight="6"
             android:minWidth="55dp"
             android:minHeight="55dp"
-            app:srcCompat="@drawable/ic_baseline_person_24"
+            app:srcCompat="@drawable/ic_person"
             tools:ignore="ContentDescription,ImageContrastCheck" />
-
-        <TextView
-            android:id="@+id/tv_rv_dateValue"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center" />
 
     </LinearLayout>
 
