--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="leon.itb.m08.e_recyclerview.view.ListFragment"
+        android:name="leon.itb.m08.e_recyclerview.ui.list.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="leon.itb.m08.e_recyclerview.view.MissedAttendanceFragment"
+        android:name="leon.itb.m08.e_recyclerview.ui.add.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
